@@ -8,7 +8,9 @@ Unreleased
 
 - Fixed LP #897435: File content needed to be reindexed on revert.
 
-- LP #824640:  Add sorting facets to advanced search view.
+- LP #824640: Add sorting facets to advanced search view.
+
+- LP #893767: Move 'Multi Upload' out of folder addables.
 
 3.75 (2011-12-07)
 -----------------
